src/objects/Territory_Field_Criteria__c.object
<CustomObject>
    <description>Criteria of Lead Territory based on Lead Fields.</description>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <referenceTo>Territory_AppD__c</referenceTo>
        <relationshipLabel>Territory Field Criterias</relationshipLabel>
        <relationshipName>Territory_Field_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Territory Field Criteria</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Territory Field Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Field Criterias</pluralLabel>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead</fullName>
        <active>true</active>
        <label>Lead</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>